# blur-gles

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
.github/workflows/: build.yml
.sample/: generate_samples.py
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gles_renderer.cpp  gles_renderer.h  native_blur_engine.cpp  shader_utils.cpp  shader_utils.h
app/src/main/java/com/example/blurgles/: MainActivity.java  NativeBlurEngine.java
app/src/main/res/drawable/: bg_card.xml  bg_telemetry_badge.xml  bg_value_pill.xml  btn_primary.xml  btn_secondary.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  styles.xml
app/src/main/res/values-night/: colors.xml  styles.xml
